# rocko_agents

./: .gitignore  README.md  build.py  index.html  main.py  manifest.json  pyproject.toml  rocko.spec  setup.bat  start.bat
.github/workflows/: build.yml
bridge/: bridge.py  execution_engine.py  model_manager.py  orchestrator.py  requirements.txt  runtime_manager.py  scheduler.py  task_worker.py
config/: app.json
core/: platform.js
rockoagents/: cli.py
schema/: project.schema.json
templates/future-project-template/: .env.example  README.md  project.json
templates/future-project-template/agents/ceo/: AGENT.md
templates/future-project-template/agents/specialist_one/: AGENT.md
