[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rockoagents"
version = "1.0.0"
description = "Self-hosted local agent orchestration"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
rocko = "rockoagents.cli:main"

[tool.setuptools.packages.find]
where = ["."]